@@ -309,3 +309,4 @@
     - Aggiunto lo stile ES_AUTOHSCROLL ad alcune caselle di testo.
     - Fixed loading failure of Win2k3 ieframe.dll BITMAP 214.
     - Centering "Edit Dialog" window.
+    - Supported exporting RES file.
