@@ -1637,6 +1637,7 @@ STRINGTABLE
     IDS_USAGE, "Uso: RisohEditor [opzioni | ""file""]\n\nOpzioni:\n--help  visualizza questo messaggio.\n--version  visualizza informazioni sulla versione.\n--load ""your-file.rc""  Carica il file (senza GUI)\n--save ""your-file.res""  Salva il file (senza GUI)\n--log-file ""log-file.txt""  specifica il file registro.\n--load-options OPZIONI  imposta le opzioni di caricamento.\n--save-options OPZIONI  imposta le opzioni di salvataggio.\n\nOpzioni caricamento: (no-load-res-h)\nOpzioni salvataggio: (idc-static)(compress)(sep-lang)(no-res-folder)(lang-macro)(less-comments)(wrap-manifest)(begin-end)(utf-16)(backup)(ms-msgtbl)"
     IDS_NOSELECTION, "Non c'è selezione."
     IDS_TRANSLATORS, "[Translators]\r\nCinese semplificato: 林鸿湘\r\nCoreano: VenusGirl (비너스걸)\r\nGiapponese: Katayama Hirofumi MZ\r\nInglese: Katayama Hirofumi MZ\r\nFinlandese: Veikko Muurikainen\r\nIndonesiano: Mas Ahmad Muhammad\r\nItaliano: R.B.\r\nPolacco: Piotr Hetnarowicz\r\nPortoghese: JNylson\r\nRusso: Dmitry Yerokhin\r\n"
+    IDS_EXPORTFILTER, "File RC (*.rc)|*.rc|File risorse binarie (*.res)|*.res|"
 }
 
 //////////////////////////////////////////////////////////////////////////////
