@@ -1403,7 +1403,7 @@ STRINGTABLE
     IDS_ENTERLANG, "리소스 언어를 입력하십시오."
     IDS_FILENOTFOUND, "파일을 찾을 수 없습니다."
     IDS_CANNOTREPLACE, "교체할 수 없습니다."
-    IDS_EXERESFILTER, "실행 파일 (*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui)|*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui|RC Files (*.rc)|*.rc|바이러리 리소스 (*.res)|*.res|모든 파일 (*.*)|*.*|"
+    IDS_EXERESFILTER, "실행 파일 (*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui)|*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui|리소스 파일 (*.rc)|*.rc|바이러리 리소스 (*.res)|*.res|모든 파일 (*.*)|*.*|"
     IDS_SAVEAS, "다른 이름으로 저장"
     IDS_CANNOTADDICON, "아이콘을 추가할 수 없습니다."
     IDS_ADDICON, "아이콘 추가"
@@ -1639,6 +1639,7 @@ STRINGTABLE
     IDS_USAGE, "사용법: RisohEditor [options | ""파일""]\n\nOptions:\n--help  이 메시지를 표시합니다.\n--version  버전 정보를 표시합니다.\n--load ""your-file.rc""  파일을 로드합니다 (GUI 없이)\n--save ""your-file.res""  파일을 저장합니다 (GUI 없이)\n--log-file ""log-file.txt""  로그 파일을 지정합니다.\n--load-options OPTIONS  로드 옵션을 설정합니다.\n--save-options OPTIONS  저장 옵션을 설정합니다.\n\nLoad options: (no-load-res-h)\nSave options: (idc-static)(compress)(sep-lang)(no-res-folder)(lang-macro)(less-comments)(wrap-manifest)(begin-end)(utf-16)(backup)(ms-msgtbl)"
     IDS_NOSELECTION, "선택 항목이 없습니다."
     IDS_TRANSLATORS, "[번역]\r\n한국어: VenusGirl-비너스걸❤\r\nEnglish: Katayama Hirofumi MZ\r\nFinnish: Veikko Muurikainen\r\nIndonesian: Mas Ahmad Muhammad\r\nItalian: R.B.\r\nJapanese: Katayama Hirofumi MZ\\r\nPolish: Piotr Hetnarowicz\r\nPortuguese: JNylson\r\nRussian: Dmitry Yerokhin\r\nSimplified Chinese: 林鸿湘\r\n"
+    IDS_EXPORTFILTER, "리소스 파일 (*.rc)|*.rc|바이너리 리소스 (*.res)|*.res|"
 }
 
 //////////////////////////////////////////////////////////////////////////////
