@@ -1399,7 +1399,7 @@ STRINGTABLE
     IDS_ENTERLANG, "请输入资源语言类型。"
     IDS_FILENOTFOUND, "未找到文件。"
     IDS_CANNOTREPLACE, "替换失败。"
-    IDS_EXERESFILTER, "资源配置文件 (*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui)|*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui|RC文件 (*.rc)|*.rc|二进制资源文件 (*.res)|*.res|全部文件 (*.*)|*.*|"
+    IDS_EXERESFILTER, "资源配置文件 (*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui)|*.exe;*.dll;*.ocx;*.cpl;*.scr;*.mui|RC 文件 (*.rc)|*.rc|二进制资源文件 (*.res)|*.res|全部文件 (*.*)|*.*|"
     IDS_SAVEAS, "另存为"
     IDS_CANNOTADDICON, "加载图标失败。"
     IDS_ADDICON, "加图标"
@@ -1635,6 +1635,7 @@ STRINGTABLE
     IDS_USAGE, "Usage: RisohEditor [options | ""file""]\n\nOptions:\n--help  Show this message.\n--version  Show version info.\n--load ""your-file.rc""  Load the file (without GUI)\n--save ""your-file.res""  Save the file (without GUI)\n--log-file ""log-file.txt""  Specify the log file.\n--load-options OPTIONS  Set load options.\n--save-options OPTIONS  Set save options.\n\nLoad options: (no-load-res-h)\nSave options: (idc-static)(compress)(sep-lang)(no-res-folder)(lang-macro)(less-comments)(wrap-manifest)(begin-end)(utf-16)(backup)(ms-msgtbl)"
     IDS_NOSELECTION, "没有选择。"
     IDS_TRANSLATORS, "[Translators]\r\nEnglish: Katayama Hirofumi MZ\r\nFinnish: Veikko Muurikainen\r\nIndonesian: Mas Ahmad Muhammad\r\nItalian: R.B.\r\nJapanese: Katayama Hirofumi MZ\r\nKorean: VenusGirl (비너스걸)\r\nPolish: Piotr Hetnarowicz\r\nPortuguese: JNylson\r\nRussian: Dmitry Yerokhin\r\nSimplified Chinese: 林鸿湘\r\n"
+    IDS_EXPORTFILTER, "RC 文件 (*.rc)|*.rc|二进制资源文件 (*.res)|*.res|"
 }
 
 //////////////////////////////////////////////////////////////////////////////
