@@ -348,6 +348,7 @@
 #define IDS_USAGE                           347
 #define IDS_NOSELECTION                     348
 #define IDS_TRANSLATORS                     349
+#define IDS_EXPORTFILTER                    350
 
 #define ID_NEW                              100
 #define ID_OPEN                             101
